ProjectManager.pm: Consensus & Alignment are now run through MUSCLE to align the consensus to the Merger alignment before being placed in the database phylogenetics.js: added a clause to ensure trace data is received in order to show trace data for the consensus editor, trace_canvas_div and change_bases_area are now shown and hidden independantly view_consensus: styles moved to toolPanel.css, change_bases_area taken out of trace_canvas_div (above it) consensus_data: now only sends data back to the client if the sequence is a ab1 type file and has trace data toolPanel.css: updates with styles for view_consensus
git-svn-id: http://svn.dnalc.org/ga/pipeline@381 8e20c4c2-b435-4367-b5b9-847ebbf7797d

--- a/vhosts/pipeline.dnalc.org/htdocs/css/toolPanel.css
+++ b/vhosts/pipeline.dnalc.org/htdocs/css/toolPanel.css
@@ -504,12 +504,12 @@ span.bold {
 
 }
 
-.non-match{
+#view-consensus .non-match {
 	background: #FFF333;
 	cursor: pointer;
 }
 
-.new-nucleotide-option{
+#view-consensus .new-nucleotide-option {
 	margin-left:5px;
 	cursor: pointer;
 	border: 1px solid black;
@@ -517,7 +517,7 @@ span.bold {
 	padding-right:2px;
 }
 
-.current-nucleotide{
+#view-consensus .current-nucleotide {
 	margin-left:5px;
 	border: 1px solid black;
 	cursor: pointer;
@@ -525,13 +525,36 @@ span.bold {
 	padding-right:2px;
 }
 
-.changed-base{
+#view-consensus .changed-base {
 	background: #FF9999;
 	cursor: pointer;
 }
 
-.monospace{
+#view-consensus .monospace {
 	font-family: "Courier New", Courier, monospace;
+}
+
+#view-consensus #labels {
+float:left; 
+padding-left:10px;
+padding-top:10px;
+padding-right:15px;
+}
+
+#view-consensus #colons {
+float:left; 
+padding-top:10px;
+padding-right:5px;
+}
+
+#view-consensus #sequences {
+overflow:auto;
+padding-top:10px;
+white-space:nowrap;
+}
+
+#view-consensus ul {
+list-style-type:none; margin:0; padding: 5px;
 }
 
 canvas {
